--- a/1_knights.html
+++ b/1_knights.html
@@ -706,7 +706,7 @@
 <footer>
   <p><small>Copyright 2025 genshin unofficial web site</small></p>
   
-  <a class="pagetop" href="1_knights.html"><div class="page__top"></div></a>
+  <a class="pagetop" href="#"><div class="page__top"></div></a>
 </footer>
 
 <script src="./js/chara-view.js"></script>
